fix readability of stock-breakdown

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,6 +1,7 @@
 html {
   color: var(--clr-black);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--bg-gradient);
 }
 
@@ -25,7 +26,9 @@ main {
   align-items: center;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -73,4 +76,8 @@ span.center {
 
 .right-align {
   text-align: right;
+}
+
+.full-width {
+  width: 100%;
 }
